gcc/testsuite/rust/rustc/ui/issues/issue-22673.rs
trait Expr : PartialEq<Self::Item> {
// { dg-error ".E0391." "" { target *-*-* } .-1 }
    type Item;
}

fn main() {}

